tests/typing/bad/testfile-context_if-1.scala
class A { def m() { if (true) { var x = 1 }; x = 2 } }
object Main { def main(args: Array[String]) { } }
